Fix some spacings

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,6 @@
     color: #FFF;
 }
 
-
 .main {
     margin-left: 30%;
     width: 70%;
@@ -21,30 +20,24 @@
     overflow-y: auto;
 }
 
+.main .main-block {
+    margin-bottom: 50px;
+}
+
 .main .main-item {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+}
+
+.main .main-item p {
+    margin-bottom: 5px;
 }
 
 .main .main-item p.text-uppercase {
-    margin-top: -13px;
+    margin-top: -10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767.98px) {
     .summary {
-        width: 50px;
-        height: 50px;
-        padding: 10px;
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        background: #333;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .main {
-        margin-left: 0;
-        width: 100%;
+        display: none;
     }
 }
